# tsetmc_py

./: .gitignore  LICENSE  Pipfile  README.md  main.py  pyproject.toml  share_capital_increase.py  stocks.py
tsetmc_scrape/: __init__.py  async_request.py  scrape_url.py  stock_scraper.py  table_scraper.py  translations.py
utils/: __init__.py  async_request.py  custom_logger.py  custom_string.py  decorator.py  run_tasks_with_executor.py  stock_data_class.py  table_scraper.py
